braindead blockentity porting